hphp/hack/test/typecheck/typedefs_generics_arity2.php.exp
File "typedefs_generics_arity2.php", line 7, characters 10-10:
The type A expects 1 type parameter(s) (Typing[4101])
