hphp/hack/test/typecheck/typedefs_generics_arity2.php
<?hh // strict
// Copyright 2004-present Facebook. All Rights Reserved.
class A<T> {

}

type B = A;
